--- a/landing/index.html
+++ b/landing/index.html
@@ -27,7 +27,7 @@
          <div class="panel">
             <div class="container">
             <h1>Tummy Full</h1>
-            <p>24/7 Available</p>
+            <p>Delicious</p>
             <a href="#">Order Here</a>
          </div>
     </header>
