--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
 
     <section id="about1">
       <h2>
-        I'm a passionate .
+        I'm an aspiring software engineer passionate about current technologies for the betterment of the world.
       </h2>
     </section>
 
